# CBNU_SCRC_2018_winter

./: README.md  git_usage.c
CAN/: Chassis.cpp  Danigo.cpp  Ioniq_chassis.cpp  Ioniq_module.cpp  Module.cpp  insane.cpp
CAN/socketcan/: CMakeLists.txt
CAN/socketcan/include/: socketcan.h
CAN/socketcan/src/: socketcan.cpp
DeadReckonging/: dead_reckoning__thread__.cpp  linear_DR.cpp  only_lat_lon.txt  simpleDR.cpp
DeadReckonging/spline_temp/: CMakeLists.txt  Spline_test.ipynb  Vector.cpp  by_BSpline.txt  by_bezier.txt  by_catmull.txt  just_lat_lon_tab.txt  main.cpp  only_lat_lon.txt  plot.py  temp_only_lat_lon.txt
DeadReckonging/spline_temp/.ipynb_checkpoints/: main-checkpoint.cpp  plot-checkpoint.py
Final/: CMakeLists.txt
NtripLibrary/: buildNtrip  mclient64  path_lib.txt  sclient64
NtripLibrary/NtripClient/: MultiClient.cpp  MultiClient.h  SingleClient.cpp
OpenCV_Practice/: Figures.ipynb  color.py  figure.py  image.py
ROS/gps_can_dr_completion/: package.xml
ROS/gps_can_dr_completion/msg/: CAN_msg.msg  final_msg.msg  prev_loc.msg
ROS/gps_can_dr_completion/src/: DR_publisher.cpp  GPS_publisher.cpp  msg_subscriber.cpp  parser_vercpp.cpp  socketcan.cpp
ROS/gps_dr/: CMakeLists.txt
ROS/gps_dr/include/gps_dr/: socketcan.h
ROS/gps_dr/src/: CAN_publisher.cpp  DR_publisher.cpp
ROS/only_gps_dr/: CMakeLists.txt  package.xml
ROS/only_gps_dr/msg/: msgTutorial.msg
ROS/only_gps_dr/src/: parser_vercpp.cpp  ros_tutorial_DR_publisher.cpp  ros_tutorial_msg_subscriber.cpp
ROS/oroca_ros_tutorials/msg/: msgTutorial.msg
ROS/oroca_ros_tutorials/src/: ros_tutorial_DR_publisher.cpp  ros_tutorial_GPS_publisher.cpp  ros_tutorial_msg_subscriber.cpp
ROS/sig_ros_tutorials/: CMakeLists.txt  package.xml
ROS/sig_ros_tutorials/src/: parser_vercpp.cpp  sig_publisher.cpp  (+1 more)
hope_final/: CMakeCache.txt  Makefile  README  cmake_install.cmake  hope_final  main.cpp  parser_vercpp.cpp
log_parse_from_textData/: 180108.ubx  README  a.out  log.txt  read_log.cpp
serial_PVT_final/: CMakeLists.txt  main.cpp  parser_vercpp.cpp  parser_vercpp.hpp
serial_ubuntu/: CMakeCache.txt  CMakeLists.txt  Makefile  Maybe_Main.cpp  PVT_Parser.cpp  PVT_Parser.h  ceSerial.cpp  cmake_install.cmake  conserial.cpp  main_PVT.cpp  main_relPos.cpp  serial_ubuntu
serial_window/: main.cpp  serialcomm.cpp  serialport.cpp  serialport.h
(+2 files in other folders)
